--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</div>			
 			</div>
 				
-				<div class="zone">					
+				<div class="zone container">					
 					<div class="leftbar">
 						<h1>Participantes<h1>
 					</div>
@@ -68,21 +68,23 @@
 					</div>
 				</div>
 				<div class="zone greybg">
-					<div class="leftbar">
-						<h1>Sobre o grupo</h1>
-					</div>
-					<div class="content">
-						<div class="box50">
-							<h2>O que o grupo é</h2>
-							<p>
-								 O objetivo dele é ser um suporte e uma motivação social para que você possa aprender de forma autônoma através dos diversos ótimos cursos e vídeos que estão disponíveis online, de graça, para todo mundo.
-							</p>
+					<div class="container">	
+						<div class="leftbar">
+							<h1>Sobre o grupo</h1>
 						</div>
-						<div class="box50">
-							<h2>O que o grupo não é</h2>
-							<p>
-								O objetivo deste grupo não é lhe ensinar programação como um curso ou uma escola fazem.
-							</p>
+						<div class="content">
+							<div class="box50">
+								<h2>O que o grupo é</h2>
+								<p>
+									 O objetivo deste grupo de estudos é ser um suporte e uma motivação social para que você possa aprender de forma autônoma através dos diversos ótimos cursos e vídeos que estão disponíveis online, de graça, para todo mundo.
+								</p>
+							</div>
+							<div class="box50">
+								<h2>O que o grupo não é</h2>
+								<p>
+									O objetivo deste grupo não é lhe ensinar programação como um curso ou uma escola fazem.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
