--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<div class="box50">
 								<h2>O que o grupo não é</h2>
 								<p>
-									O objetivo deste grupo não é lhe ensinar programação como um curso ou uma escola fazem.
+									O objetivo deste grupo não é lhe ensinar programação como um curso ou uma escola tradicional fazem. Acreditamos no aprendizado autodidata, aproveitando-se da imensidão de conhecimentos disponível através da Internet.
 								</p>
 							</div>
 						</div>
