--- a/index.html
+++ b/index.html
@@ -88,5 +88,27 @@
 						</div>
 					</div>
 				</div>
+				<div class="zone">
+					<div class="container">
+						<div class="leftbar">
+							<h1>Como começar</h1>
+						</div>
+						<div class="content">
+							<p>
+								Os seguintes links são ótimos materiais que foram criados para quem não sabe absolutamente nada de programação.
+							</p>
+							<p>
+								Estes materiais são totalmente amigáveis e lhe guiarão passo a passo do zero até que você consiga criar uma página como esta aqui você mesmo.
+							</p>
+							<div class="box50">
+								<h2>Em português</h2>
+								<p>
+									
+								</p>
+							</div>
+						</div>
+					</div>
+					
+				</div>
 		</body>
 	</html>
