--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 			<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		</header>
 		<body>
-			
 			<div class="social">
 				<a href="https://www.facebook.com/groups/1462209870676748/" target="blank"><img src="images/facebook.png"></a>
 				
@@ -87,6 +86,18 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="zone">
+					<div class="container">
+						<div class="leftbar">
+							<h1>Porque aprender</h1>
+						</div>
+						<div class="content">
+							<object width="560" height="315"><param name="movie" value="//www.youtube.com/v/nKIu9yen5nc?version=3&amp;hl=pt_BR"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/nKIu9yen5nc?version=3&amp;hl=pt_BR" type="application/x-shockwave-flash" width="560" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+						</div>
+					</div>
+				</div>
+					
 				</div>
 				<div class="zone">
 					<div class="container">
