--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<h1>Porque aprender</h1>
 						</div>
 						<div class="content">
-							<object width="100%"><param name="movie" value="//www.youtube.com/v/nKIu9yen5nc?version=3&amp;hl=pt_BR"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/nKIu9yen5nc?version=3&amp;hl=pt_BR" type="application/x-shockwave-flash" width="560" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+							<iframe width="640" height="360" src="//www.youtube.com/embed/nKIu9yen5nc" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
