--- a/custos/addsupplier.html
+++ b/custos/addsupplier.html
@@ -30,7 +30,7 @@
 	<div class="container">
 		<div id="title-bar" class="page-header row">
 			<div class="col-lg-6">
-				<h1>Adicionar fornecedor</h1>
+				<h1><span class="glyphicon glyphicon-plus"></span> Adicionar fornecedor</h1>
 			</div>
 		</div>
 		<p>Preencha ou edite os campos abaixo e depois clique em <strong>Salvar</strong>.</p><br>
@@ -60,7 +60,10 @@
 				</div>
 			</div>
 		</form>
-		<a href="index.html" class="btn btn-success" id="header-btn">Salvar</a>
+		<div style="float: right; text-align: right">
+			<a href="#">Cancelar</a> ou 
+			<a href="index.html" class="btn btn-success">Salvar</a>
+		</div>
 	</div> <!-- Close container -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
