--- a/custos/index.html
+++ b/custos/index.html
@@ -30,14 +30,23 @@
 	<div class="container">
 		<div id="title-bar" class="page-header row">
 			<div class="col-lg-6">
-				<h1>Fornecedores</h1>
+				<h1><span class="glyphicon glyphicon-user"></span> Fornecedores</h1>
 			</div>
 			<div class="col-lg-6">	
 				<a href="addsupplier.html" type="button" id="header-btn" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Adicionar fornecedor</a>
 			</div>
 		</div>
-		<p>Clique no botão <strong>Adicionar fornecedor</strong> para cadastrar os seus fornecedores.</p><br><br>
+		<div class="row">
+			<div class="col-lg-6">
+				<p>Clique no botão <strong>Adicionar fornecedor</strong> para cadastrar os seus fornecedores.</p><br>
+			</div>
+			<div class="input-group col-lg-3" style="float:right; margin-right: 15px">
+			  	<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+			 	<input type="text" class="form-control" placeholder="Busca">
+			</div>
+		</div>
 	</div>
+	<br>
 	<div class="container">
 		<table class="table table-hover">
 			<thead>
@@ -132,6 +141,11 @@
 			<li><a href="#">5</a></li>
 			<li><a href="#">&raquo;</a></li>
 		</ul>
+		<div class="btn-group pull-left" style="margin-top: 20px">
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share-alt"></span></button>
+			<button type="button" class="btn btn-default">Excel</button>
+			<button type="button" class="btn btn-default">PDF</button>
+		</div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
