--- a/custos/addsupplier.html
+++ b/custos/addsupplier.html
@@ -19,7 +19,7 @@
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#"><span class="glyphicon glyphicon-user"></span> Fornecedores</a> </li>
-					<li><a href="#"><span class="glyphicon glyphicon-leaf"></span> Materiais</a> </li>
+					<li><a href="#"><span class="glyphicon glyphicon-inbox"></span> Materiais</a> </li>
 					<li><a href="#"><span class="glyphicon glyphicon-tags"></span> Produtos</a> </li>
 					<li><a href="#"><span class="glyphicon glyphicon-refresh"></span> Multiplicadores</a> </li>
 					<li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> Listas de preço</a></li>
