New dbc1.html page

--- a/unit1_projects/dbc1.html
+++ b/unit1_projects/dbc1.html
@@ -1,5 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+	<title>Dev Bootcamp 1</title>
+	<meta charset= "utf-8">
+	<link rel="stylesheet" type="text/css" href="stylesheets/dbc1.css">
+
+</head>
 <body>
 	<h1>Header 1</h1>
 	<p>
@@ -20,24 +26,24 @@
 		Quam nunc ultricies conubia nec, <em>arcu at auctor mattis turpis et</em>, vitae phasellus ipsum natoque pede, lorem urna nullam at in, magna in et orci dolor nunc. Nulla sem eget vel, eros at pellentesque, nullam felis nulla rutrum in elit. <strong>Suscipit</strong> pellentesque nonummy.
 	</p>
 	<p>
-		<table>
+		<table id="citytable">
 			<tr>
 				<th>Name</th>
 				<th>City</th>
 			</tr>
 			<tr>
 				<td>Igor</td>
-				<td>Nova Petropolis</td>
+				<td>Nova Petrópolis</td>
 			</tr>
 			<tr>
 				<td>Bruna</td>
-				<td>Picada Cafe</td>
+				<td>Picada Café</td>
 			</tr>
 		</table>
 	</p>
 	
 	<h3>Header 3</h3>
-	<p>
+	<p class="center">
 		<a href="#" target="blank"><img src="http://girldevelopit.com/assets/pink-logo.png"></a>
 	</p>
 	<p>
