Finalized experiment on HTML

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -7,13 +7,32 @@
 </head>
 <body>
 <header>
-	<p>This is the header</p>
+	<h1>This is my page</h1>
 </header>
 <aside>
-	<p>This is the sidebar</p>
+	<ul>
+		<li>About me</li>
+		<li>Things I like</li>
+		<li>Where I live</li>
+		<li>Favorite <span>food</span></li>
+	</ul>
 </aside>
 <article>
 	<p>This is the main page</p>
+	<table>
+		<tr>
+			<th>Header 1</th>
+			<th>Header 2</th>
+		</tr>
+		<tr>
+			<td>Name</td>
+			<td>Igor</td>
+		</tr>
+		<tr>
+			<td>City</td>
+			<td>Nova Petrópolis</td>
+		</tr>
+	</table>
 </article>
 <footer>
 	<p>This is the footer</p>
