Technical blog upload

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -19,6 +19,10 @@
 </aside>
 <article>
 	<p>This is the main page</p>
+	<div class="picture">
+		<img src="images/top.jpg">
+		<p class="label">This place is called The rocks of silence</p>
+	</div>
 	<table>
 		<tr>
 			<th>Header 1</th>
