Cultural blog post upload

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<article>
 		<h2>Technical Blog Posts</h2>
 		<ul>
-			<li><a target="blank" href="http://igorgaelzer.github.io/unit1_projects/week1_technical_blog.html">Design and UX analysis</a><br>
-			<span class="phase-week">Phase 0, week 1</span></li>
+			<li><a href="unit1_projects/week1_technical_blog.html">Design and UX analysis</a><br>
+			<span class="phase-week">Phase 0, week 1 - May 17th, 2014</span></li>
 		</ul>
 
 		<h2>Cultural Blog Posts</h2>
 		<ul>
-			<li><a target="blank" href="http://igorgaelzer.github.io/unit1_projects/week1_technical_blog.html">Design and UX analysis</a><br>
-			<span class="phase-week">Phase 0, week 1</span></li>
+			<li><a href="unit1_projects/week1_cultural_blog.html">First impressions on Dev Bootcamp`s culture</a><br>
+			<span class="phase-week">Phase 0, week 1 - May 18th, 2014</span></li>
 		</ul>
 	</article>
 	</section>
