--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -15,7 +15,7 @@
 	<section class="wrapper" >
 		<article>
 			<h2>Design and UX analysis</h2>
-			<spam class="phase-week">Phase 0 - Week 1</spam>
+			<spam class="phase-week">Phase 0, week 1 - May 17th, 2014</spam>
 			<p>
 				I'm very happy to be starting this blog on my experience at Dev Bootcamp. This is the first week of phase 0, and after a long preparation we are starting to build our own websites. Exciting!
 			</p>
