Cultural blog title corrected

--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Igor's Technical Blog</title>
+	<title>Igor's Cultural Blog</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
 </head>
 <body>
