Changed index file title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Igor's Technical Blog</title>
+	<title>Igor's Dev Bootcamp links</title>
 	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/blog.css">
 </head>
 <body>
