--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -16,7 +16,7 @@
 	<article>
 		<h2>Favorite sites wireframes</h2>
 		<h3>Medium</h3>
-		<img src="images/medium.png">
+		<img src="images/Medium.png">
 		<p>
 			The main problem Medium is trying to solve is getting rid of all visual elements that could could distract the users from the content of the site.
 		</p>
@@ -24,7 +24,7 @@
 			The main challange, then, is the limitation of text, links, buttons and functionalities that can be applied. Understanding what is the most important for the user once you can not add everything is a very hard task to get right.
 		</p>
 		<h3>Tuts+</h3>
-		<img src="images/tuts.png">
+		<img src="images/Tuts.png">
 		<p>
 			The main problem that Tuts+ is trying to solve is to be very trustworthy and to present themselves as experts in the courses they sell.
 		</p>
@@ -33,7 +33,7 @@
 		</p>
 
 		<h3>Mailchimp</h3>
-		<img src="images/mailchimp.png">
+		<img src="images/Mailchimp.png">
 		<p>
 			The main problem Mailchimp is trying to solve is making the process of creating and sending email marketing an easy thing to do.
 		</p>
