Added wireframe site to index

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 	<article>
 		<h2>Technical Blog Posts</h2>
 		<ul>
-			<li><a href="unit1_projects/week1_technical_blog.html">Design and UX analysis</a><br>
-			<span class="phase-week">Phase 0, week 1 - May 17th, 2014</span></li>
+			<li>
+				<a href="unit1_projects/week1_technical_blog.html">Design and UX analysis</a><br>
+				<span class="phase-week">Phase 0, week 1 - May 17th, 2014</span>
+			</li>
+			<li class="index-link">
+				<a href="unit1_projects/wireframe_sites.html">Favorite sites wireframes</a><br>
+				<span class="phase-week">Phase 0, week 1 - May 17th, 2014</span>
+			</li>
 		</ul>
 
 		<h2>Cultural Blog Posts</h2>
