Added "U1.W2: Intermediate HTML & CSS" to index

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 			<li><a href="unit1_projects/week1_cultural_blog.html">First impressions on Dev Bootcamp`s culture</a><br>
 			<span class="phase-week">Phase 0, week 1 - May 18th, 2014</span></li>
 		</ul>
+
+		<h2>Other</h2>
+		<ul>
+			<li><a href="unit1_projects/class1/practice/index.html">U1.W2: Intermediate HTML and CSS</a><br>
+			<span class="phase-week">Phase 0, week 2 - May 20th, 2014</span></li>
+		</ul>
 	</article>
 	</section>
 </body>
