New index and solo challenge

--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -1,21 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Igor's Cultural Blog</title>
+	<title>Igor's index page</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
 </head>
 <body>
-	<aside class="center">
-		<img id="profile-image" src="images/profile.jpg">
-		<p>
-			<strong>Igor Gaelzer</strong><br>
-			igor@nordweg.com
-		</p>
-	</aside>
-	<section class="wrapper" >
-		<article>
+	<header>
+		<nav class="wrapper">
+			<ul>
+				<li><a href="https://github.com/Devbootcamp/phase_0_unit_1">DBC Github</a></li>
+				<li><a href="https://socrates.devbootcamp.com">Socrates</a></li>
+				<li><a href="http://apply.devbootcamp.com/s/534475/?pl=1">Apply DBC</a></li>
+				<li><a href="https://plus.google.com/u/0/communities/112496352416987127987?cfem=1">Google+ Group</a></li>
+				<li><a href="https://www.facebook.com/groups/551601014959939/">Facebook Group</a></li>
+				<li><a href="http://devbootcamp.com">Dev Bootcamp</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<div class="wrapper">
+		
+<!-- SIDEBAR -->
+
+		<aside> 
+			<img id="profile-image" src="images/profile.jpg">
+			<p class="myname">Igor Gaelzer</p>
+			<p>
+				Founder and CEO<br>
+				at <a href="http://www.nordweg.com">Nordweg</a>
+			</p>
+			<p>
+				igor@nordweg.com
+			</p>
+			<p>
+				<a href="https://www.facebook.com/igorgaelzer">Facebook</a><br>
+				<a href="https://github.com/igorgaelzer">Github</a>
+			</p>
+			<p>
+				Nova Petropolis,<br>
+				Brazil
+			</p>
+		</aside>
+		
+<!-- ENDS SIDEBAR -->
+
+		<section class="posts-container">
+			
+<!-- PAGE CONTENT GOES HERE -->
+
+			<article>
 			<h2>First impressions on Dev Bootcamp`s culture</h2>
-			<spam class="phase-week">Phase 0, week 1 - May 18th, 2014</spam>
+			<spam class="date">Phase 0, week 1 - May 18th, 2014</spam>
 			<p>
 				The way Dev Bootcamp focuses in developing and continually improving it`s culture - who we are / how would we like to be / how to get there - is sexiest aspect of the school in my opinion and main motivator for me to give my best.
 			</p>
@@ -32,6 +67,10 @@
 				I believe this will be a very engaging experience and, even though all this is very new and at times it does make me get butterflies in my stomach, I am positive this is the best environment for a true and complete learning experience.
 			</p>
 		</article>
-	</section>
+
+<!-- ENDS PAGE CONTENT -->
+
+		</section>
+	</div> <!-- Ends wrapper -->
 </body>
 </html>
