--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -1,81 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Igor's Technical Blog</title>
+	<title>Igor's index page</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
 </head>
 <body>
-	<aside class="center">
-		<img id="profile-image" src="images/profile.jpg">
-		<p>
-			<strong>Igor Gaelzer</strong><br>
-			igor@nordweg.com
-		</p>
-	</aside>
-	<section class="wrapper" >
-		<article>
-			<h2>Design and UX analysis</h2>
-			<spam class="phase-week">Phase 0, week 1 - May 17th, 2014</spam>
-			<p>
-				I'm very happy to be starting this blog on my experience at Dev Bootcamp. This is the first week of phase 0, and after a long preparation we are starting to build our own websites. Exciting!
-			</p>
-			<p>
-				As our first assignment, we are analyzing the design and user experience of 3 of our favorite sites, cosidering things as how pleasant they are to the eyes, how easy it is to find what you are looking for and etc.
-			</p>
-			<p>
-				My 3 site picks are <strong>Medium</strong>, <strong>Tuts+</strong> and <strong>Mailchimp</strong>.
-			</p>
-			
-			<h3>Medium</h3>
-			<img src="images/medium.jpg">
-			<p>
-				Medium is my very favorite site when it comes to modern design and usability. It is a platform for autonomous writers to post and share their articles. 
-			</p>
-			<p>
-			What I really like about it is how it`s design is focused on the most important thing about this site, the content, and take away mostly all the other things we are used to see on other sites around the web.
-			</p>
-			<h4>Main strenghts:</h4>
+	<header>
+		<nav class="wrapper">
 			<ul>
-				<li>Estimated reading time for every article</li>
-				<li>Saving articles for reading later</li>
-				<li>Commenting and discussion on specific parts of the text</li>
-				<li>Very minimalistic and content focused design</li>
-				<li>Communication made through well chosen fonts and spacing</li>
+				<li><a href="https://github.com/Devbootcamp/phase_0_unit_1">DBC Github</a></li>
+				<li><a href="https://socrates.devbootcamp.com">Socrates</a></li>
+				<li><a href="http://apply.devbootcamp.com/s/534475/?pl=1">Apply DBC</a></li>
+				<li><a href="https://plus.google.com/u/0/communities/112496352416987127987?cfem=1">Google+ Group</a></li>
+				<li><a href="https://www.facebook.com/groups/551601014959939/">Facebook Group</a></li>
+				<li><a href="http://devbootcamp.com">Dev Bootcamp</a></li>
 			</ul>
+		</nav>
+	</header>
+	
+	<div class="wrapper">
+		
+<!-- SIDEBAR -->
+
+		<aside> 
+			<img id="profile-image" src="images/profile.jpg">
+			<p class="myname">Igor Gaelzer</p>
+			<p>
+				Founder and CEO<br>
+				at <a href="http://www.nordweg.com">Nordweg</a>
+			</p>
+			<p>
+				igor@nordweg.com
+			</p>
+			<p>
+				<a href="https://www.facebook.com/igorgaelzer">Facebook</a><br>
+				<a href="https://github.com/igorgaelzer">Github</a>
+			</p>
+			<p>
+				Nova Petropolis,<br>
+				Brazil
+			</p>
+		</aside>
+		
+<!-- ENDS SIDEBAR -->
+
+		<section class="posts-container">
 			
-			<h3>Tuts+</h3>
-			<img src="images/tuts.jpg">
-			<p>
-				Tuts+ is a website on good programming and design practices. It has great content, and also online courses, that keep up with the newest trends comming up everyday.
-			</p>
-			<p>
-				What I like most about Tuts+, besides the content, is how easy it is to find the things you are looking for, how images complement the  how it`s design is clean and well spaced, being easy on the eyes.
-			</p>
-			<h4>Main strenghts:</h4>
-			<ul>
-				<li>Easy and clear navigations</li>
-				<li>Minimalistic, content focused design</li>
-				<li>Beautiful matte colors</li>
-			</ul>
+<!-- PAGE CONTENT GOES HERE -->
 
-
-			<h3>Mailchimp</h3>
-			<img src="images/mailchimp.jpg">
-			<p>
-				Mailchimp is an email marketing web app that lets you easily manage your contacts, create your campains, send them and follow up the results, like opens, clicks and convertions.
-			</p>
-			<p>
-				What I really like about Mailchimp is that it brings all the minimalism that many sites have been implementing to an actual app. Also, Mailchimp brings humor to the process of doing things, which makes it a very pleasurable app to use.
-			</p>
+			<article>
+				<h2>Design and UX analysis</h2>
+				<spam class="date">Phase 0, week 1 - May 17th, 2014</spam>
+				<p>
+					I'm very happy to be starting this blog on my experience at Dev Bootcamp. This is the first week of phase 0, and after a long preparation we are starting to build our own websites. Exciting!
+				</p>
+				<p>
+					As our first assignment, we are analyzing the design and user experience of 3 of our favorite sites, cosidering things as how pleasant they are to the eyes, how easy it is to find what you are looking for and etc.
+				</p>
+				<p>
+					My 3 site picks are <strong>Medium</strong>, <strong>Tuts+</strong> and <strong>Mailchimp</strong>.
+				</p>
+				
+				<h3>Medium</h3>
+				<img src="images/medium.jpg">
+				<p>
+					Medium is my very favorite site when it comes to modern design and usability. It is a platform for autonomous writers to post and share their articles. 
+				</p>
+				<p>
+				What I really like about it is how it`s design is focused on the most important thing about this site, the content, and take away mostly all the other things we are used to see on other sites around the web.
+				</p>
 				<h4>Main strenghts:</h4>
-			<ul>
-				<li>Minimalistc design usually seen only in webpages brought to an app</li>
-				<li>Uses humor to make the process of using it more fun</li>
-				<li>Super easy to use</li>
-				<li>Great value proposition - Send better email</li>
-			</ul>
+				<ul>
+					<li>Estimated reading time for every article</li>
+					<li>Saving articles for reading later</li>
+					<li>Commenting and discussion on specific parts of the text</li>
+					<li>Very minimalistic and content focused design</li>
+					<li>Communication made through well chosen fonts and spacing</li>
+				</ul>
+				
+				<h3>Tuts+</h3>
+				<img src="images/tuts.jpg">
+				<p>
+					Tuts+ is a website on good programming and design practices. It has great content, and also online courses, that keep up with the newest trends comming up everyday.
+				</p>
+				<p>
+					What I like most about Tuts+, besides the content, is how easy it is to find the things you are looking for, how images complement the  how it`s design is clean and well spaced, being easy on the eyes.
+				</p>
+				<h4>Main strenghts:</h4>
+				<ul>
+					<li>Easy and clear navigations</li>
+					<li>Minimalistic, content focused design</li>
+					<li>Beautiful matte colors</li>
+				</ul>
 
-		</article>
-	</section>
+
+				<h3>Mailchimp</h3>
+				<img src="images/mailchimp.jpg">
+				<p>
+					Mailchimp is an email marketing web app that lets you easily manage your contacts, create your campains, send them and follow up the results, like opens, clicks and convertions.
+				</p>
+				<p>
+					What I really like about Mailchimp is that it brings all the minimalism that many sites have been implementing to an actual app. Also, Mailchimp brings humor to the process of doing things, which makes it a very pleasurable app to use.
+				</p>
+					<h4>Main strenghts:</h4>
+				<ul>
+					<li>Minimalistc design usually seen only in webpages brought to an app</li>
+					<li>Uses humor to make the process of using it more fun</li>
+					<li>Super easy to use</li>
+					<li>Great value proposition - Send better email</li>
+				</ul>
+
+			</article>
+		
+<!-- ENDS PAGE CONTENT -->
+
+		</section>
+	</div> <!-- Ends wrapper -->
 </body>
 </html>
