--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -1,48 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wireframes</title>
+	<title>Igor's index page</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
 </head>
 <body>
-	<aside class="center">
-		<img id="profile-image" src="images/profile.jpg">
-		<p>
-			<strong>Igor Gaelzer</strong><br>
-			igor@nordweg.com
-		</p>
-	</aside>
-	<section class="wrapper" >
-	<article>
-		<h2>Favorite sites wireframes</h2>
-		<h3>Medium</h3>
-		<img src="images/Medium.png">
-		<p>
-			The main problem Medium is trying to solve is getting rid of all visual elements that could could distract the users from the content of the site.
-		</p>
-		<p>
-			The main challange, then, is the limitation of text, links, buttons and functionalities that can be applied. Understanding what is the most important for the user once you can not add everything is a very hard task to get right.
-		</p>
-		<h3>Tuts+</h3>
-		<img src="images/Tuts.png">
-		<p>
-			The main problem that Tuts+ is trying to solve is to be very trustworthy and to present themselves as experts in the courses they sell.
-		</p>
-		<p>
-			The main visual challange for this site is to organize all courses and present tem in interesting ways that are going to convert. One interesting way of doing this is showing their most popular courses on the landing page, as well as the reasons they are the best at what they do.
-		</p>
+	<header>
+		<nav class="wrapper">
+			<ul>
+				<li><a href="https://github.com/Devbootcamp/phase_0_unit_1">DBC Github</a></li>
+				<li><a href="https://socrates.devbootcamp.com">Socrates</a></li>
+				<li><a href="http://apply.devbootcamp.com/s/534475/?pl=1">Apply DBC</a></li>
+				<li><a href="https://plus.google.com/u/0/communities/112496352416987127987?cfem=1">Google+ Group</a></li>
+				<li><a href="https://www.facebook.com/groups/551601014959939/">Facebook Group</a></li>
+				<li><a href="http://devbootcamp.com">Dev Bootcamp</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<div class="wrapper">
+		
+<!-- SIDEBAR -->
 
-		<h3>Mailchimp</h3>
-		<img src="images/Mailchimp.png">
-		<p>
-			The main problem Mailchimp is trying to solve is making the process of creating and sending email marketing an easy thing to do.
-		</p>
-		<p>
-			To solve this problem, the main visual challange they face is quickly presentig how easy using the app is. For that, the site shows an animation os a newsletter being created at the moment, with just a few drag and drops.
-		</p>
+		<aside> 
+			<img id="profile-image" src="images/profile.jpg">
+			<p class="myname">Igor Gaelzer</p>
+			<p>
+				Founder and CEO<br>
+				at <a href="http://www.nordweg.com">Nordweg</a>
+			</p>
+			<p>
+				igor@nordweg.com
+			</p>
+			<p>
+				<a href="https://www.facebook.com/igorgaelzer">Facebook</a><br>
+				<a href="https://github.com/igorgaelzer">Github</a>
+			</p>
+			<p>
+				Nova Petropolis,<br>
+				Brazil
+			</p>
+		</aside>
+		
+<!-- ENDS SIDEBAR -->
 
+		<section class="posts-container">
+			
+<!-- PAGE CONTENT GOES HERE -->
 
-	</article>
-	</section>
+			<article>
+				<h2>Favorite sites wireframes</h2>
+				<h3>Medium</h3>
+				<img src="images/Medium.png">
+				<p>
+					The main problem Medium is trying to solve is getting rid of all visual elements that could could distract the users from the content of the site.
+				</p>
+				<p>
+					The main challange, then, is the limitation of text, links, buttons and functionalities that can be applied. Understanding what is the most important for the user once you can not add everything is a very hard task to get right.
+				</p>
+				<h3>Tuts+</h3>
+				<img src="images/Tuts.png">
+				<p>
+					The main problem that Tuts+ is trying to solve is to be very trustworthy and to present themselves as experts in the courses they sell.
+				</p>
+				<p>
+					The main visual challange for this site is to organize all courses and present tem in interesting ways that are going to convert. One interesting way of doing this is showing their most popular courses on the landing page, as well as the reasons they are the best at what they do.
+				</p>
+
+				<h3>Mailchimp</h3>
+				<img src="images/Mailchimp.png">
+				<p>
+					The main problem Mailchimp is trying to solve is making the process of creating and sending email marketing an easy thing to do.
+				</p>
+				<p>
+					To solve this problem, the main visual challange they face is quickly presentig how easy using the app is. For that, the site shows an animation os a newsletter being created at the moment, with just a few drag and drops.
+				</p>
+			</article>
+		
+<!-- ENDS PAGE CONTENT -->
+
+		</section>
+	</div> <!-- Ends wrapper -->
 </body>
 </html>
