fixed broken images

--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -62,7 +62,7 @@
 				</p>
 				
 				<h3>Medium</h3>
-				<img src="images/medium.jpg">
+				<img src="images/medium.png">
 				<p>
 					Medium is my very favorite site when it comes to modern design and usability. It is a platform for autonomous writers to post and share their articles. 
 				</p>
@@ -79,7 +79,7 @@
 				</ul>
 				
 				<h3>Tuts+</h3>
-				<img src="images/tuts.jpg">
+				<img src="images/tuts.png">
 				<p>
 					Tuts+ is a website on good programming and design practices. It has great content, and also online courses, that keep up with the newest trends comming up everyday.
 				</p>
@@ -95,7 +95,7 @@
 
 
 				<h3>Mailchimp</h3>
-				<img src="images/mailchimp.jpg">
+				<img src="images/mailchimp.png">
 				<p>
 					Mailchimp is an email marketing web app that lets you easily manage your contacts, create your campains, send them and follow up the results, like opens, clicks and convertions.
 				</p>
