Week 2 technical blog update

--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Igor's index page</title>
+	<title>Week 1 - Technical Blog</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
 </head>
 <body>
