--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 					<li><a href="unit1_projects/my_wireframe.html"> Solo Challenge | Planning and wireframing my own site</a><br>
 					<span class="date">May 21st, 2014</span></li>
 
+					<li><a href="unit1_projects/week2_technical.html"> Technical Blog | What is the difference between Margin, Border, and Padding?</a><br>
+					<span class="date">May 24th, 2014</span></li>
+
 				</ul>
 			</div> <!-- Ends index-container -->
 
