--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li><a href="unit1_projects/class1/practice/index.html">Intermediate HTML and CSS</a><br>
 					<span class="date">May 20th, 2014</span></li>	
 					
-					<li><a href="unit1_projects/gps1-1.html"> GPS 1.1 | Understanding Pair Programming</a><br>
+					<li><a href="unit1_projects/GPS1-1/gps1-1.html"> GPS 1.1 | Understanding Pair Programming</a><br>
 					<span class="date">May 21st, 2014</span></li>
 
 					<li><a href="unit1_projects/my_wireframe.html"> Solo Challenge | Planning and wireframing my own site</a><br>
