--- a/unit1_projects/GPS1-1/gps1-1.html
+++ b/unit1_projects/GPS1-1/gps1-1.html
@@ -7,7 +7,7 @@ FIRST Write your names here:
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="p0_gps1.1.css">
+    <link rel="stylesheet" href="gps1-1.css">
     <title>Understanding Pair Programming</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/gps1-1.css">
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
