updated index with git cheatsheet link

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 					<li><a href="unit1_projects/week2_technical.html"> Technical Blog | What is the difference between Margin, Border, and Padding?</a><br>
 					<span class="date">May 24th, 2014</span></li>
 
+					<li><a href="unit1_projects/week2_git_workflow.html"> Git workflow cheatsheet</a><br>
+					<span class="date">May 26th, 2014</span></li>
+
 				</ul>
 			</div> <!-- Ends index-container -->
 
