--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<li><a href="unit1_projects/week3_technical.html">Technical Blog | Why Javascript</a><br>
 					<span class="date">June 1st, 2014</span></li>
 
-					<li><a href="unit1_projects/week3_cultural.html">Thinking style and Phase 0</a><br>
+					<li><a href="unit1_projects/week3_cultural.html">Cultural Blog | Thinking style and Phase 0</a><br>
 					<span class="date">June 1st, 2014</span></li>
 
 				</ul>
