Created blog-posts folder and updated index links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Igor's index page</title>
-	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/blog.css">
+	<link rel="stylesheet" type="text/css" href="blog-posts/stylesheets/blog.css">
 </head>
 <body>
 	<header>
@@ -23,7 +23,7 @@
 <!-- SIDEBAR -->
 
 		<aside> 
-			<img id="profile-image" src="unit1_projects/images/profile.jpg">
+			<img id="profile-image" src="blog-posts/images/profile.jpg">
 			<p class="myname">Igor Gaelzer</p>
 			<p>
 				Founder and CEO<br>
@@ -51,13 +51,13 @@
 			<div id="index-container">
 				<h3>Week 1</h3>
 				<ul>
-					<li><a href="unit1_projects/week1_technical_blog.html">Technical Blog | Design and UX analysis</a><br>
+					<li><a href="blog-posts/week1_technical_blog.html">Technical Blog | Design and UX analysis</a><br>
 					<span class="date">May 17th, 2014</span></li>
 
-					<li><a href="unit1_projects/week1_cultural_blog.html">Cultural Blog | First impressions on Dev Bootcamp`s culture</a><br>
+					<li><a href="blog-posts/week1_cultural_blog.html">Cultural Blog | First impressions on Dev Bootcamp`s culture</a><br>
 					<span class="date">May 18th, 2014</span></li>
 					
-					<li><a href="unit1_projects/wireframe_sites.html">Favorite sites wireframes</a><br>
+					<li><a href="blog-posts/wireframe_sites.html">Favorite sites wireframes</a><br>
 					<span class="date">May 17th, 2014</span></li>
 				</ul>
 				
@@ -70,23 +70,23 @@
 					<li><a href="unit1_projects/GPS1-1/gps1-1.html"> GPS 1.1 | Understanding Pair Programming</a><br>
 					<span class="date">May 21st, 2014</span></li>
 
-					<li><a href="unit1_projects/my_wireframe.html"> Solo Challenge | Planning and wireframing my own site</a><br>
+					<li><a href="blog-posts/my_wireframe.html"> Solo Challenge | Planning and wireframing my own site</a><br>
 					<span class="date">May 21st, 2014</span></li>
 
-					<li><a href="unit1_projects/week2_technical.html"> Technical Blog | What is the difference between Margin, Border, and Padding?</a><br>
+					<li><a href="blog-posts/week2_technical.html"> Technical Blog | What is the difference between Margin, Border, and Padding?</a><br>
 					<span class="date">May 24th, 2014</span></li>
 
-					<li><a href="unit1_projects/week2_git_workflow.html"> Git workflow cheatsheet</a><br>
+					<li><a href="blog-posts/week2_git_workflow.html"> Git workflow cheatsheet</a><br>
 					<span class="date">May 26th, 2014</span></li>
 
 				</ul>
 
 				<h3>Week 3</h3>
 				<ul>				
-					<li><a href="unit1_projects/week3_technical.html">Technical Blog | Why Javascript</a><br>
+					<li><a href="blog-posts/week3_technical.html">Technical Blog | Why Javascript</a><br>
 					<span class="date">June 1st, 2014</span></li>
 
-					<li><a href="unit1_projects/week3_cultural.html">Cultural Blog | Thinking style and Phase 0</a><br>
+					<li><a href="blog-posts/week3_cultural.html">Cultural Blog | Thinking style and Phase 0</a><br>
 					<span class="date">June 1st, 2014</span></li>
 
 				</ul>
