uploaded cultural blog

--- a/blog-posts/template.html
+++ b/blog-posts/template.html
@@ -51,6 +51,7 @@
 			<article>
 				
 				<h2>Title goes here</h2>
+				<spam class="date">Phase 0, week 2 - May 24th, 2014</spam>
 				<p>Paragraph 1</p>
 				<p>Paragraph 2</p>
 
