updated index links

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 
 				</ul>
 
+				<h3>Week 4</h3>
+				<ul>				
+					<li><a href="blog-posts/week4_technical.html">Technical Blog | The enumerable#map Ryby method</a><br>
+					<span class="date">June 8th, 2014</span></li>
+
+					<li><a href="blog-posts/week4_cultural_blog.html">Cultural Blog | Thinking style and Phase 0</a><br>
+					<span class="date">June 8th, 2014</span></li>
+
+				</ul>
+
 			</div> <!-- Ends index-container -->
 
 <!-- ENDS PAGE CONTENT -->
