added week 5 tech blog

--- a/blog-posts/template.html
+++ b/blog-posts/template.html
@@ -52,8 +52,11 @@
 				
 				<h2>Title goes here</h2>
 				<spam class="date">Phase 0, week 2 - May 24th, 2014</spam>
-				<p>Paragraph 1</p>
-				<p>Paragraph 2</p>
+				<p>Paragraph</p>
+
+				<div class="code-sample">
+					<p>Code sample</p>
+				</div>
 
 			</article>
 		
