Cultural blog up and index update

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 
 				</ul>
 
+				<h3>Week 5</h3>
+				<ul>				
+					<li><a href="blog-posts/week5_technical.html">Technical Blog | About Classes in Ruby</a><br>
+					<span class="date">June 13th, 2014</span></li>
+
+					<li><a href="blog-posts/week5_cultural.html">Cultural Blog | The great things about pair programming and feedback</a><br>
+					<span class="date">June 14th, 2014</span></li>
+
+				</ul>
+
 			</div> <!-- Ends index-container -->
 
 <!-- ENDS PAGE CONTENT -->
