added blog posts and updated index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 
 					<li><a href="blog-posts/week2_git_workflow.html"> Git workflow cheatsheet</a><br>
 					<span class="date">May 26th, 2014</span></li>
-
 				</ul>
 
 				<h3>Week 3</h3>
@@ -88,7 +87,6 @@
 
 					<li><a href="blog-posts/week3_cultural.html">Cultural Blog | Thinking style and Phase 0</a><br>
 					<span class="date">June 1st, 2014</span></li>
-
 				</ul>
 
 				<h3>Week 4</h3>
@@ -98,7 +96,6 @@
 
 					<li><a href="blog-posts/week4_cultural_blog.html">Cultural Blog | Thinking style and Phase 0</a><br>
 					<span class="date">June 8th, 2014</span></li>
-
 				</ul>
 
 				<h3>Week 5</h3>
@@ -108,7 +105,15 @@
 
 					<li><a href="blog-posts/week5_cultural.html">Cultural Blog | The great things about pair programming and feedback</a><br>
 					<span class="date">June 14th, 2014</span></li>
+				</ul>
 
+				<h3>Week 6</h3>
+				<ul>				
+					<li><a href="blog-posts/week6_technical.html">Technical Blog | Ruby Variable Scope</a><br>
+					<span class="date">June 23rd, 2014</span></li>
+
+					<li><a href="blog-posts/week6_cultural_blog.html">Cultural Blog | Stereotype Threat</a><br>
+					<span class="date">June 23rd, 2014</span></li>
 				</ul>
 
 			</div> <!-- Ends index-container -->
