week 7 blog posts

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 					<span class="date">June 23rd, 2014</span></li>
 				</ul>
 
+				<h3>Week 7</h3>
+				<ul>				
+					<li><a href="blog-posts/week7_technical.html">Technical Blog | Comparing SQL databases with NoSQL databases</a><br>
+					<span class="date">June 29th, 2014</span></li>
+
+					<li><a href="blog-posts/week7_cultural.html">Cultural Blog | Affirmation and Stereotype Threat</a><br>
+					<span class="date">June 29th, 2014</span></li>
+				</ul>
+
 			</div> <!-- Ends index-container -->
 
 <!-- ENDS PAGE CONTENT -->
