--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
 					<span class="date">June 29th, 2014</span></li>
 				</ul>
 
+				<h3>Week 8</h3>
+				<ul>				
+					<li><a href="blog-posts/unit3_cheatsheet.html">Technical Blog | HTML cheatsheet</a><br>
+					<span class="date">July 6th, 2014</span></li>
+
+					<!-- <li><a href="blog-posts/week7_cultural.html">Cultural Blog | Affirmation and Stereotype Threat</a><br>
+					<span class="date">June 29th, 2014</span></li> -->
+				</ul>
+
 			</div> <!-- Ends index-container -->
 
 <!-- ENDS PAGE CONTENT -->
